tests/errors/runtime.CannotConvert.res
123
123

══╡ Conversion Error ╞════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Problem when converting value to given type

  Got value:
      1.2 :floating
  
  Conversion to given type is not supported:
      :date

  ┃ File: tests/errors/runtime.CannotConvert.art
  ┃ Line: 3
  ┃ 
  ┃    1 ║  print to :integer "123"
  ┃    2 ║  print to :string 123
  ┃    3 ║► print to :date 1.2
  ┃    4 ║
